finished until the end of data prep

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I'm working on the multi-reference alignment problem in this repo. Will be trying data focused methods. 
+I'm working on a learning based method for the multi-reference alignment problem. Still in development.
