final version that has a robust and flexible data-prep step. I have also added more comments.

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-In this notebook I'm working on a learning based approach for the multi-reference alignment problem. I try to reconstruct a two-dimentional image from one-dimentional images, whose angles are unknown by the algorithm. 
+In this notebook I'm working on a learning based approach for the multi-reference alignment problem. I try to reconstruct two-dimentional objects from its one-dimentional density images, which are taken from unknown angles. 
 
-To that end, I generate two dimentional random concave hulls and simulate their images to create training data for the learning algorithm. I will test the algorithms success recovering the image's angles, from which point on there are readily available mathematical methods to reconstruct the whole image using images and their rotation angles. 
+To that end, I generate two-dimentional random concave hulls and simulate their one-dimentional density images to create training data for the learning algorithm. I will measure the algorithm's success in recovery of the image's angles. If the rotation angles of the one-dimentional images are known, there are readily available mathematical methods that reconstruct the whole two-dimentional object by using the one-dimentional density images and their rotation angles. 
 
-After I measure how well the angles are recovered, I will also build another model where the whole two dimentional image would be reconstructed by an end-to-end learning algorithm, without needing a seperate mathematical tool for the reconstruction step.
+After I measure the algorithm's success in recovery of the rotation angles, I will also build another model where the whole two dimentional image would be reconstructed by an end-to-end learning algorithm, without needing a seperate mathematical tool for the reconstruction step.
 
-Upon the completion of these steps, I will add another layer of complexity by decreasing the signal to noise ratio with adding random gaussian noise to the one-dimentional inputs.
+Upon the completion of these steps, I will add another layer of complexity by decreasing the signal to noise ratio with adding random gaussian noise to the one-dimentional inputs. A measurement that have a particular importance in information theory is the change in number of images that are required to be seen to produce a successful reconstruction, as the signal to noise decreases.
 
 If these tests prove to be successful and that a learning based approach could be used for reconstruction, I will extent the solution to recovering three-dimentional objects from their two-dimentional images. To that end, I plan to use Cryo-EM data and reconstruct three-dimentional molecules from their images.
