--- a/model.ipynb
+++ b/model.ipynb
@@ -66,7 +66,7 @@
     "    noise = tf.random_normal(shape=tf.shape(X), mean=0.0, stddev=std, dtype=tf.float32) \n",
     "    return(input_layer + noise)\n",
     "    \n",
-    "def conv_1Ds(x, scope, filter_width, n_kernel, stride=1):\n",
+    "def conv(x, scope, filter_h,filter_w, n_kernel, stride_h=1,stride_w=1, padding='SAME'):\n",
     "    \"\"\"\n",
     "    1d convolutions over multiple 1d images\n",
     "    scope        = name tf variable scope\n",
@@ -74,13 +74,32 @@
     "    n_kernel     = # of kernels\n",
     "    stride       = locations\n",
     "    \"\"\"\n",
-    "    with tf.variable_scope(scope):\n",
+    "    with tf.variable_scope(scope, reuse=tf.AUTO_REUSE):\n",
     "        n_x = x.get_shape().as_list()[-1]\n",
     "        w = tf.get_variable('w',\n",
-    "                            [1, filter_width, n_x, n_kernel],\n",
+    "                            [filter_h, filter_w, n_x, n_kernel],\n",
     "                            initializer=tf.random_normal_initializer(stddev=0.04))\n",
     "        b = tf.get_variable('b', [n_kernel], initializer=tf.constant_initializer(0))\n",
-    "        return tf.nn.convolution(x, w, padding='SAME', strides=[1, 1, stride,1])+b    \n",
+    "        return tf.nn.convolution(x, w, padding=padding, strides=[1, stride_h, stride_w,1])+b    \n",
+    "\n",
+    "\n",
+    "def maxpool(X, scope, filter_h,filter_w, stride_h,stride_w, padding='VALID'):\n",
+    "    \"\"\"\n",
+    "    maxpool operation over multiple 1d images\n",
+    "    \"\"\"\n",
+    "    with tf.variable_scope(scope, reuse=tf.AUTO_REUSE) as scope:\n",
+    "        pool = tf.nn.max_pool(inputs, \n",
+    "                            ksize=[1, filter_h, filter_w, 1], \n",
+    "                            strides=[1, stride_h, stride_w, 1],\n",
+    "                            padding=padding)\n",
+    "    return pool    \n",
+    "    \n",
+    "def upsample(X, ratio=2):\n",
+    "    \"\"\"\n",
+    "    Takes a 4D image tensor and increases spatial resolution by replicating values\n",
+    "    \"\"\"\n",
+    "    n_h, n_w = X.get_shape().as_list()[1:3]\n",
+    "    return tf.image.resize_nearest_neighbor(X, [n_h*ratio, n_w*ratio])\n",
     "    \n",
     "    \n",
     "def convOneDImages(X, reuse=False):\n",
@@ -89,20 +108,40 @@
     "    for given object. Currently trying an approach similar to GNN.\n",
     "    \"\"\"\n",
     "    with tf.variable_scope('convOneDImages', reuse=reuse):\n",
-    "        h = tf.nn.leaky_relu(conv_1Ds(X, 'c0', r_f=5, n_f=16, stride=2), 0.1) #32x16\n",
-    "        h = tf.nn.leaky_relu(conv_1Ds(h, 'c1', r_f=5, n_f=32, stride=2), 0.1) #16x32\n",
-    "        h = tf.nn.leaky_relu(conv_1Ds(h, 'c2', r_f=5, n_f=64, stride=2), 0.1) #8x64\n",
-    "        h = tf.nn.leaky_relu(conv_1Ds(h, 'c3', r_f=5, n_f=128, stride=2), 0.1)#4x128\n",
+    "        h = tf.nn.leaky_relu(conv(X, 'conv0',1,5,32,1,2), 0.1)    #32x32\n",
+    "        h = tf.nn.leaky_relu(conv(h, 'conv1', 1,3,64,1,1), 0.1)   #32x64\n",
+    "        h = maxpool(h,'pool1' 1,2,1,2,'VALID')                        #16x64\n",
+    "        h = tf.nn.leaky_relu(conv(h, 'conv2', 1,3,128,1,1), 0.1)  #16x128\n",
+    "        h = maxpool(h,'pool2' 1,2,1,2,'VALID')                        #8x128\n",
+    "        h = tf.nn.leaky_relu(conv(h, 'conv3', 1,3,256,1,1), 0.1)  #8x256\n",
+    "        h = maxpool(h,'pool3' 1,2,1,2,'VALID')                        #4x256\n",
     "        h = tf.reshape(h, [n_batch* model_n_img_per_obj, -1])\n",
     "        \n",
-    "        h = tf.nn.leaky_relu(dense(h, 'fc_0', 128*4), 0.1)\n",
-    "        h = tf.nn.leaky_relu(dense(h, 'fc_1', 128*4), 0.1)\n",
+    "        h = tf.nn.leaky_relu(dense(h, 'fc_0', 512), 0.1)\n",
+    "        h = tf.nn.leaky_relu(dense(h, 'fc_1', 512), 0.1)\n",
     "        h = tf.reshape(h, [n_batch, model_n_img_per_obj, -1]) \n",
     "\n",
     "        h = tf.reduce_mean(h, 1)\n",
     "        return h\n",
     "\n",
     "\n",
+    "def gen2DObj(X, reuse=False):\n",
+    "    \"\"\"\n",
+    "    Takes encoding produced by the 1D images and generates 2D Object image\n",
+    "    \"\"\"\n",
+    "    with tf.variable_scope('2D_object_generator', reuse=reuse):\n",
+    "        h = tf.nn.leaky_relu(dense(X, 'hz', n_h=6*6*32), 0.1)\n",
+    "        h = tf.nn.leaky_relu(dense(h, 'hz', n_h=6*6*128), 0.1)\n",
+    "        h = tf.reshape(h, [n_batch, 6, 6, 128]) \n",
+    "        h = upsample(h)                                          #12x12x128\n",
+    "        h = tf.nn.leaky_relu(conv(h, 'h1', 3,3, n_f=64), 0.1)    #12x12x64\n",
+    "        h = upsample(h)                                          #24x24x64\n",
+    "        h = tf.nn.leaky_relu(conv(h, 'h2', 3,3, n_f=32), 0.1)    #24x24x32\n",
+    "        h = upsample(h)                                          #48x48x32\n",
+    "        h = tf.nn.leaky_relu(conv(h, 'h3', 3,3, n_f=16), 0.1)    #48x48x16\n",
+    "        h = conv(h, 'hx', 1,1,1)\n",
+    "        return h    \n",
+    "    \n",
     "\n",
     "class objGenNetwork(object):\n",
     "    \"\"\"\n",
