--- a/model.ipynb
+++ b/model.ipynb
@@ -178,10 +178,9 @@
     "        \n",
     "    def inference(X):\n",
     "        h = noise(X,self.noise)\n",
-    "        h = convOneDImages(X)\n",
-    "        h = tf.nn.leaky_relu(dense(h, 'fc_0', 1024), 0.1)\n",
-    "        h = tf.nn.leaky_relu(dense(h, 'fc_1', 2048), 0.1)\n",
-    "        self.logits = dense(h, 'p_logits', img_dim*img_dim)\n",
+    "        h = convOneDImages(h)\n",
+    "        self.gen_img = gen2DObj(h)\n",
+    "\n",
     "        \n",
     "    def data_reader(store_obj=self.store,\n",
     "                    nrows = self.nrows,\n",
@@ -250,7 +249,7 @@
     "            self.loss = tf.reduce_mean(entropy, name='loss')\n",
     "\n",
     "\n",
-    "def eval(self):\n",
+    "    def eval(self):\n",
     "        \"\"\"\n",
     "        Calculates means of correct predictions per image\n",
     "        in a given batch.\n",
