--- a/model.ipynb
+++ b/model.ipynb
@@ -388,7 +388,22 @@
       "Accuracy at epoch 12: 0.9913802146911621 \n",
       "Loss at step 13: 0.07835543900728226\n",
       "Accuracy at epoch 13: 0.9914323091506958 \n",
-      "Loss at step 14: 0.06249538064002991\n"
+      "Loss at step 14: 0.06249538064002991\n",
+      "Accuracy at epoch 14: 0.9893836975097656 \n",
+      "Loss at step 15: 0.0545024573802948\n",
+      "Accuracy at epoch 15: 0.9983159899711609 \n",
+      "Loss at step 16: 0.020315641537308693\n",
+      "Accuracy at epoch 16: 0.9995225667953491 \n",
+      "Loss at step 17: 0.010055198334157467\n",
+      "Accuracy at epoch 17: 0.9997656345367432 \n",
+      "Loss at step 18: 0.007143028080463409\n",
+      "Accuracy at epoch 18: 0.9997222423553467 \n",
+      "Loss at step 19: 0.0071395449340343475\n",
+      "Accuracy at epoch 19: 1.0 \n",
+      "Loss at step 20: 0.004692068323493004\n",
+      "Accuracy at epoch 20: 0.9999826550483704 \n",
+      "Loss at step 21: 0.0031651814933866262\n",
+      "Accuracy at epoch 21: 1.0 \n"
      ]
     }
    ],
