--- a/model.ipynb
+++ b/model.ipynb
@@ -92,7 +92,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model definitions"
+    "#### Model definition\n",
+    "I will try using a GNN type input, and a binary output where the loss is computed by taking the predicted output's minimum crossentropy value over all translations and rotations of the true 2D object. In order to the decrease the search space for of the minimum possible loss value, I have positioned the underlying 2D objects so that they start from the first row and first column. True 2D object is produced 360 times with each version having a 1 degree delta to each other. Then the results are positioned to the upper left corner. The predicted object is compared with these images and we backpropogate the errors of the version with the minimum loss value.\n",
+    "\n",
+    "The conv_1D_Images() function defines the way the 1D images are processed. There are 4 convolutional layers with pooling, an two dense layers after them. Results of the dense layers are averaged and given input to the gen_2D_Obj() function.\n",
+    "\n",
+    "gen_2D_Obj() has 2 dense layer in the beginning and then has 3 deconvolution layers which produces a 48x48 image."
    ]
   },
   {
@@ -560,6 +565,17 @@
    "source": [
     "# training\n",
     "model.train(n_epochs=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Currently I have removed the gaussian noise on the 1D images and the only source of randomless is coming from the angles of the 1D images and the objects' positions in the 1D images. I could not do a lot of iterations on my laptop however in all my trials the accuracy seem to plateau at around 52%. I have tried several different settings, changed the optimizer, learning rates, number of 1D images processed.  The model's output does not seem to be sensitive to the input images and it rather produces a general 2D shape which I guess produces optimum possible shape it could formulate without adapting to the inputs.\n",
+    "\n",
+    "There are examples of the model's output at the cell below. The underlying true 2D objects are on the left column, and model's predictions are on the right column.\n",
+    "\n",
+    "I will try using a conditional GAN next. In that setup the discriminator should be able to detect that the generated images all have the same shape if the generator tries to produce something similar for each input. So it should prevent this kind of behaviour."
    ]
   },
   {
