--- a/model.ipynb
+++ b/model.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "source": [
     "#### Model definition\n",
-    "I will try using a GNN type input, and a binary output where the loss is computed by taking the predicted output's minimum crossentropy value over all translations and rotations of the true 2D object. In order to the decrease the search space for of the minimum possible loss value, I have positioned the underlying 2D objects so that they start from the first row and first column. True 2D object is produced 360 times with each version having a 1 degree delta to each other. Then the results are positioned to the upper left corner. The predicted object is compared with these images and we backpropogate the errors of the version with the minimum loss value.\n",
+    "I will try using a GNN type input, and a binary output where the loss is computed by taking the predicted output's minimum crossentropy value over all translations and rotations of the true 2D object. I have positioned the underlying 2D objects so that they start from the first row and first column in order to the decrease the search space for of the minimum possible loss value. True 2D object is produced 360 times with each version having a 1 degree delta to each other. Then the results are positioned to the upper left corner. The predicted object is compared with these images and we backpropogate the errors of the version with the minimum loss value.\n",
     "\n",
     "The conv_1D_Images() function defines the way the 1D images are processed. There are 4 convolutional layers with pooling, an two dense layers after them. Results of the dense layers are averaged and given input to the gen_2D_Obj() function.\n",
     "\n",
