--- a/model.ipynb
+++ b/model.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "gen_2D_Obj() has 2 dense layer in the beginning and then has 3 deconvolution layers which produces a 48x48 image.\n",
     "\n",
-    "I will also try using a contional GAN after seeing the results in this version, "
+    "I will also try using a contional GAN after seeing the results in this version."
    ]
   },
   {
